# nordic-seas-validation

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pydoc-markdown.yaml  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yaml
docs/: api.md
nsv/: __init__.py  registry_raw.txt  section_finder.py  standardizer.py  utils.py
src/: __init__.py  registries.py  registry_raw.txt
