[metadata]
name = src

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pooch
python_requires = >=3.8

[options.packages.find]
where=src

[options.package_data]
src = registry_raw.txt

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator
