[metadata]
name = nsv

[options]
packages = nsv
zip_safe = False
include_package_data = True
install_requires =
    cf_xarray
    gsw
    pandas
    pooch
    scipy
    xarray
python_requires = >=3.8

[options.package_data]
nsv = registry_raw.txt

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    E203  # whitespace before ':' - doesn't work well with black
    W503  # line break before binary operator
